make .cirrus.xml also actually build icecream
'make dist' just creates a tarball, it doesn't build the sources

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,4 +17,5 @@ task:
   script:
     - ./autogen.sh
     - ./configure --prefix=/usr/local
-    - gmake -j`sysctl -n kern.smp.cpus` dist
+    - gmake -j`sysctl -n kern.smp.cpus`
+    - gmake dist
