--- a/scheduler/Makefile.am
+++ b/scheduler/Makefile.am
@@ -3,6 +3,8 @@ sbin_PROGRAMS = icecc-scheduler
 icecc_scheduler_SOURCES = compileserver.cpp job.cpp jobstat.cpp scheduler.cpp
 icecc_scheduler_LDADD = ../services/libicecc.la
 
+AM_LIBTOOLFLAGS = --silent
+
 noinst_HEADERS = \
     compileserver.h \
     job.h \
