create tarball in icecc-create-env atomically
There's a small chance that icecc-create-env will get invoked again
for the same result (e.g. because different wrapper scripts point
to the same real compiler), and so the existing tarball would
be temporarily broken.

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -491,10 +491,11 @@ md5=$(for i in $target_files; do $md5sum $tempdir/$i; done | sed -e "s# $tempdir
 echo "creating $md5.tar.gz"
 mydir=$(pwd)
 cd $tempdir
-tar -czh --numeric-owner -f "$mydir/$md5".tar.gz $target_files || {
+tar -czh --numeric-owner -f "$md5".tar.gz $target_files || {
   echo "Couldn't create archive"
   exit 3
 }
+mv "$md5".tar.gz "$mydir"/
 cd ..
 rm -rf $tempdir
 rm -f $tmp_ld_so_conf
