fix resolve_path() in icecc-create-env (#445)
If there's a cd to dirname of local_path, then the file itself
becomes just basename of local_path indeed.

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -62,7 +62,7 @@ resolve_path()
     # so take care just of the file component itself
     while test -L "$local_path"; do
         cd $(dirname $local_path)
-        local_path=$(readlink $local_path)
+        local_path=$(readlink $(basename $local_path))
     done
     abs_path $local_path
     popd >/dev/null
