try to strip binaries in icecc-create-env
It used to be the case that it did 'strip -s' on the binaries, but
f7562625a4a9 reverted it because in #154 somebody said that doing
so corrupted the binaries there, for whatever reason.
As now icecream automatically packages compiler in any location,
this now again matters a bit more, as now it's easy to use icecream
with a custom compiler build, so the "niche" case is now more likely
(and I use it). And in that case this makes a big difference
in the tarball size.
Instead of using 'strip -s', which strips "all", use only --strip-unneeded
or -g (= --strip-debug), which should be safe.

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -457,7 +457,13 @@ for i in $target_files; do
     ;;
   esac
   mkdir -p $tempdir/$(dirname $target)
-  cp -p $path $tempdir/$target
+  if test -x $path && objcopy -p --strip-unneeded $path $tempdir/$target 2>/dev/null; then
+    true # ok
+  elif test -x $path && objcopy -p -g $path $tempdir/$target 2>/dev/null; then
+    true # ok
+  else
+    cp -p $path $tempdir/$target
+  fi
   target=$(echo $target | cut -b2-)
   new_target_files="$new_target_files $target"
 done
