--- a/services/Makefile.am
+++ b/services/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libicecc.la
-libicecc_la_SOURCES = job.cpp comm.cpp exitcode.cpp getifaddrs.cpp logging.cpp tempfile.c platform.cpp gcc.cpp util.cpp
+libicecc_la_SOURCES = job.cpp comm.cpp exitcode.cpp getifaddrs.cpp logging.cpp ncpus.c tempfile.c platform.cpp gcc.cpp util.cpp
 libicecc_la_LIBADD = \
 	$(LZO_LDADD) \
 	$(ZSTD_LDADD) \
@@ -19,6 +19,7 @@ noinst_HEADERS = \
 	exitcode.h \
 	getifaddrs.h \
 	logging.h \
+	ncpus.h \
 	tempfile.h \
 	platform.h \
 	util.h
