when using more "generic" library in icecc-create-env, check arch (#393)
The problem in #393 is that the libc to use (which ldd gives) is
/lib/x86_64-linux-gnu/libc.so.6, but there's /lib/libc.so.6 pointing to
/lib/i386-linux-gnu/libc.so.6 .
Also as an optimization do not do this if the regexp in sed fails
with files in just one level of directories and so there's actually
no parent lib.

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -134,8 +134,17 @@ add_file ()
 	      # Check whether the same library also exists in the parent directory,
 	      # and prefer that on the assumption that it is a more generic one.
 	      local baselib=$(echo "$lib" | sed 's,\(/[^/]*\)/.*\(/[^/]*\)$,\1\2,')
-	      if test -f "$baselib"; then
-	        lib=$baselib
+              usebaselib=
+              if test "$baselib" != "$lib" -a -f "$baselib"; then
+                # Make sure the base lib has the same architecture.
+                local archlib="$(objdump -f "$lib" | grep architecture)"
+                local archbaselib="$(objdump -f "$baselib" | grep architecture)"
+                if test "$archlib" = "$archbaselib"; then
+                  usebaselib=1
+                fi
+              fi
+              if test -n "$usebaselib"; then
+                lib=$baselib
                 add_file "$lib"
               else
                 # Optimization: We are adding a library we got from ldd output, so avoid
