move unittests from tests/ to their own directory
They were kind of lost among all the files used for tests.
Unit tests are faster than "real" tests done by launching the binaries,
so this could help reduce the time of running the tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,8 @@ SUBDIRS = \
 	suse \
 	compilerwrapper \
 	scheduler \
-	tests
+	tests \
+	unittests
 
 dist-hook:
 	( cd $(top_srcdir) && git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" ) >$(distdir)/ChangeLog
@@ -20,3 +21,7 @@ test: install
 	$(MAKE) -C tests $@
 test-strict: install
 	$(MAKE) -C tests $@
+
+# Make invoking tests also invoke unittests.
+test: check
+test-strict: check
