--- a/configure.ac
+++ b/configure.ac
@@ -372,6 +372,7 @@ AC_CONFIG_FILES([ suse/Makefile ])
 AC_CONFIG_FILES([ compilerwrapper/Makefile ])
 AC_CONFIG_FILES([ scheduler/Makefile ])
 AC_CONFIG_FILES([ tests/Makefile ])
+AC_CONFIG_FILES([ unittests/Makefile ])
 AC_CONFIG_FILES([ client/icecc-create-env ])
 AC_CONFIG_FILES([ client/icecc-test-env ])
 AC_CONFIG_FILES([ tests/test-setup.sh ])
