make the unittests build and run

--- a/unittests/Makefile.am
+++ b/unittests/Makefile.am
@@ -5,3 +5,6 @@ testargs_LDADD = ../client/libclient.a ../services/libicecc.la
 
 check_PROGRAMS = testargs
 testargs_SOURCES = args.cpp
+
+# Make the tests also print the test log if they fail.
+check: export VERBOSE=1
