fix 'make test' depending on 'make check'
With parallel make 'test' depends on install, which recursively invokes building
in subdirs, and 'check' also recursively invokes building in subdirs, so ensure
they are ordered properly, when recursive make doesn't handle that well.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,10 +18,9 @@ dist-hook:
 	( cd $(top_srcdir) && git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" ) >$(distdir)/ChangeLog
 
 test: install
+# 'make test' also depends on 'make check', but using plain 'test: check' dependency breaks with recursive make
+	$(MAKE) check
 	$(MAKE) -C tests $@
 test-strict: install
+	$(MAKE) check
 	$(MAKE) -C tests $@
-
-# Make invoking tests also invoke unittests.
-test: check
-test-strict: check
