--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ services/libicecc.la
 suse/icecream.spec
 doc/*.1
 doc/*.7
+doc/*.gz
 doc/index.html
 tests/results
 tests/test-suite.log
@@ -50,3 +51,7 @@ tests/testargs.log
 tests/testargs.trs
 tests/test-setup.sh
 tests/listing.txt
+unittests/testargs
+unittests/testargs.log
+unittests/testargs.trs
+unittests/test-suite.log
