--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,7 +12,7 @@ task:
   install_script:
     - sed -i.bak -e 's,pkg+http://pkg.FreeBSD.org/\${ABI}/quarterly,pkg+http://pkg.FreeBSD.org/\${ABI}/latest,' /etc/pkg/FreeBSD.conf
     - pkg upgrade -y
-    - pkg install -y autoconf automake docbook2X gmake libtool lzo2 zstd
+    - pkg install -y autoconf automake docbook2X gmake libarchive libtool lzo2 pkgconf zstd
   script:
     - ./autogen.sh
     - ./configure --prefix=/usr/local
