travis osx now comes with zstd already installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
   - os: osx
     before_install:
       - brew update
-      - brew install lzo zstd docbook2x gdb ccache libarchive expect telnet
+      - brew install lzo docbook2x gdb ccache libarchive expect telnet
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
