Revert "'brew update' is not needed in travis"
Looks like this was only a temporary state when the Travis snapshot
was new enough.

This reverts commit cae7cc184452f021b669d223acbcf4c36c256297.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ matrix:
     dist: bionic
   - os: osx
     before_install:
-      # - brew update
+      - brew update
       - brew install lzo docbook2x gdb ccache libarchive expect telnet
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
