use asciidoc for manpages, instead of docbook
- Most of all, GitHub knows how to render online .adoc files directly
from the repository, so we can have online documentation simply
by having manpages written this way. Since currently README.md
duplicates a lot of content of icecream.7, this duplication can now
be removed.
- AsciiDoc is much simpler to read and write than Docbook. It has
no semantic marking (i.e. nothing like DocBook's <varname> etc. tags),
but that seems to be an acceptable cost and it's not really used
for anything anyway. I've written down some conventions
in the README.adoc file.
- There should be hopefully no hassle with finding the right
Docbook tool (configure searched for 5(!) different binaries and AFAIK
they are not always compatible).
- I'm no expert on Markdown vs AsciiDoc, but searching suggests
AsciiDoc is more standardized and more powerful.

This commit only translates manpages documents to AsciiDoc,
without changing any content. Updating it, removing obsolete and
duplicate content can come in following commits.

--- a/configure.ac
+++ b/configure.ac
@@ -112,13 +112,17 @@ AC_ARG_WITH(man,
 )
 AS_IF([test "x$with_man" != "xno"], [
     build_man=yes
-    AC_PATH_PROGS(DOCBOOK2X,
-        [docbook2x-man db2x_docbook2man docbook-to-man docbook2man.pl docbook2man])
-    AS_IF([test -z "$DOCBOOK2X"], [
-        AC_MSG_WARN([docbook2x is missing. Install docbook2x package.])
-        DOCBOOK2X='echo docbook2x is missing. Install docbook2x package.'])
+    AC_PATH_PROGS(ASCIIDOC, [asciidoc])
+    AS_IF([test -z "$ASCIIDOC"], [
+        AC_MSG_WARN([asciidoc is missing. Install asciidoc package.])
+        ASCIIDOC='echo asciidoc is missing. Install asciidoc package.'])
+    AC_PATH_PROGS(A2X, [a2x])
+    AS_IF([test -z "$A2X"], [
+        AC_MSG_WARN([a2x is missing. Install a2x package.])
+        A2X='echo a2x is missing. Install a2x package.'])
 ], [build_man=no])
-AC_SUBST(DOCBOOK2X)
+AC_SUBST(ASCIIDOC)
+AC_SUBST(A2X)
 AM_CONDITIONAL([WITH_ICECREAM_MAN], [test "x$build_man" != "xno"])
 
 ########################################################################
