--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: cpp
 
 script:
   - |
+        if test "$TRAVIS_OS_NAME" = "osx"; then
+            # set up the catalog properly for asciidoc
+            sudo mkdir /etc/xml
+            sudo ln -s /usr/local/etc/xml/catalog /etc/xml/catalog
+        fi
   - ./autogen.sh
   - ./configure --prefix=$PWD/_inst
   - make -s -j $(getconf _NPROCESSORS_ONLN)
@@ -49,7 +54,7 @@ matrix:
   - os: osx
     before_install:
       - brew update
-      - brew install lzo docbook2x gdb ccache libarchive expect telnet util-linux gnu-getopt
+      - brew install lzo asciidoc docbook-xsl gdb ccache libarchive expect telnet util-linux gnu-getopt
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
@@ -90,7 +95,8 @@ addons:
     - libcap-ng-utils
     - liblzo2-dev
     - libzstd1-dev
-    - docbook2x
+    - asciidoc
+    - xsltproc # needed by asciidoc
     - gdb
     - valgrind
     - libarchive-dev
