Tweaked build system slightly
* Added option to build with LTO
* Reverted to C++11 until C++14/17 is justified

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -49,3 +49,7 @@ target_link_libraries(client PRIVATE copts_common icecc_la)
 
 add_executable(icecc src/main.cpp)
 target_link_libraries(icecc PRIVATE copts_common client icecc_la)
+
+if (ICECREAM_LTO)
+    set_property(TARGET client PROPERTY INTERPROCEDURAL_OPTIMIZATION ON)
+endif()
