--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
-project(icecream VERSION 1.3.90)
+
+project(icecream VERSION 1.4.90)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
+
+option(ICECREAM_LTO "Build with link-time optimization" ON)
 
 add_library(copts_common INTERFACE)
 target_compile_options(copts_common INTERFACE
+    -fvisibility=hidden
+    $<$<COMPILE_LANGUAGE:CXX>:-fvisibility-inlines-hidden>
     -Wall
     -Wextra
     -Wpedantic
