--- a/scheduler/CMakeLists.txt
+++ b/scheduler/CMakeLists.txt
@@ -5,7 +5,7 @@ check_include_file(sys/signal.h HAVE_SYS_SIGNAL_H)
 add_executable(icecc-scheduler
     src/compileserver.cpp
     src/jobstat.cpp
-    src/scheduler.cpp
+    src/main.cpp
     src/scheduler_job.cpp)
     target_compile_definitions(icecc-scheduler PRIVATE
     $<$<BOOL:${HAVE_SYS_SIGNAL_H}>:HAVE_SYS_SIGNAL_H>)
