--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,31 +12,49 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  autotools-optional_packages:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       - name: Install dependencies
         run: sudo apt install autoconf automake libcap-ng-dev libzstd-dev libarchive-dev liblzo2-dev ccache asciidoc expect
 
-      # Runs a set of commands using the runners shell
       - name: Configure(autotools)
         run: |
           cd $GITHUB_WORKSPACE
           ./autogen.sh
           ./configure --prefix=/tmp
+
       - name: Build(autotools)
         run: |
           cd $GITHUB_WORKSPACE
           make -j$(nproc)
+
       - name: Test(tests taken from original project)
         run: |
           cd $GITHUB_WORKSPACE
           make test -j$(nproc)
-          
+  autotools-without_optional_packages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: sudo apt install autoconf automake liblzo2-dev ccache asciidoc expect
+
+      - name: Configure(autotools)
+        run: |
+          cd $GITHUB_WORKSPACE
+          ./autogen.sh
+          ./configure --prefix=/tmp
+
+      - name: Build(autotools)
+        run: |
+          cd $GITHUB_WORKSPACE
+          make -j$(nproc)
+
+      - name: Test(tests taken from original project)
+        run: |
+          cd $GITHUB_WORKSPACE
+          make test -j$(nproc)
